---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 20. 12. 2017
  Changed:
    - Updated grid concrete map colour to differentiate it from normal concrete
  Bugfixes:
    - Fixed issue with grid concrete when high resolution graphics are active
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 19. 12. 2017
  Added:
    - New grid-based Concrete item that reflects the classic 0.15 Factorio concrete style
  Changed:
    - Updated Painted concrete graphics to soften the 'brick' look
  Bugfixes:
    - Tweaks to concrete layering to clean up some buggy tile transitions
    - Removal of duplicate recipe definitions for walls
  Locales:
    - Updated German and Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 18. 12. 2017
  Added:
    - New warning for incompatibilities when 'Picker Tweaks' mod is installed
  Changed:
    - Gravel is now a craftable item so as to avoid accidental placement of raw ore on the ground and to resolve the conflict it caused with the 'Picker Extended Version' mod
    - Improved handling when mods add signal colours that may conflict with those already added by Dectorio
    - Improved notifications for conflicting mods with more information on how to resolve the conflict
  Removed:
    - Markdown version of CHANGELOG.md in favour of Factorio style changelog.txt
  Locales:
    - Updated German translations
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 15. 12. 2017
  Added:
    - Factorio 0.16 support
    - New Painted concrete textures to match new vanilla Concrete style
    - Painted concrete floorings now support high resolution graphics
    - New landscaping items for placing all the new base game terrain types