@@ -2,6 +2,7 @@
 Version: 0.8.3
 Date: 20. 12. 2017
   Changed:
+    - Adjusted concrete layering to allow grid concrete and normal concrete to merge nicely
     - Updated grid concrete map colour to differentiate it from normal concrete
   Bugfixes:
     - Fixed issue with grid concrete when high resolution graphics are active
